--- a/front_SPA/style.css
+++ b/front_SPA/style.css
@@ -3,7 +3,8 @@
 }   
 body{
     background:url('assets/horizontal-banner-forest-background-silhouettes-trees-magical-misty-landscape-fog-green-yellow-illustration-225955264.jpeg');
-    background-size:100%;
+    background-size:cover;
+    height: 100vh;
     /* background-repeat: no-repeat; */
 }
 .navbar{
@@ -24,14 +25,14 @@ body{
     justify-content: space-evenly;
     align-items: center;
 }
-a{
+navbar a{
     margin: 0 1.5rem;
     color: black;
     text-decoration: none;
     font-weight: 700;
     font-size: large;
 }
-a:hover{
+navbar a:hover{
 
     color: green;
     transition-duration: .5s;
@@ -152,3 +153,213 @@ a:hover{
   to {opacity: 1}
 }
 /* -------------------------------------------------- Page Dons ------------------------------------------ */
+
+/* dons avec prix */
+.top-bar{
+  background-color: white;
+  height: 3.5rem;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: large;
+  font-weight: 800;
+}
+.bigContainer{
+  background: url('assets/oiseau2.webp');
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: row;
+  /* justify-content: space-between; */
+}
+.donnations{
+  border: black solid 2px;
+  width: 25%;
+  margin:auto;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  background-color: white;
+}
+/* .montants{
+  background-color: white;
+  width: 100%;
+} */
+.title-don{
+background-color: black;
+color: white;
+display: flex;
+justify-content: space-evenly;
+align-items: center;
+margin-bottom: 1rem;
+padding: 1rem 0;
+}
+
+.allprice{
+  display: flex;
+  flex-direction: column;
+}
+.first-line, .sd-line{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  /* margin-top: 2rem; */
+}
+.first-line{
+  margin-bottom: 1.5rem;
+}
+.first-line div{
+  padding: 1rem;
+  border: black 2px solid;
+
+}
+
+.sd-line{
+  margin-bottom: 2rem;
+}
+
+.sd-line div{
+  padding: 1rem;
+  border: black 2px solid;
+  cursor: pointer;
+  display: flex;
+}
+.allprice a{
+  text-decoration: none;
+  color: #111111;
+  font-size: large;
+  font-weight: 700;
+}
+.allprice a:hover{
+  background-color: green;
+  transition-duration: .5s;
+}
+
+.montant-libre{
+  margin-bottom: 2rem;
+  width:80%;
+  margin-left: 10%;
+  display: flex;
+  height: 2rem;
+  border: #111111 solid 2px;
+  /* align-items: center; */
+  /* text-align: center; */
+}
+.montant-libre input{
+  text-align: center;
+  align-items: center;
+  width: 80%;
+  /* border-right: #111111 2px solid; */
+}
+ .montant-libre div{
+  align-items: center;
+  text-align: center;
+  width: 20%;
+  line-height: 25px;
+  /* height: 100%; */
+}  
+.montant-libre p{
+  height: 100%;
+  text-align: center;
+  border-left: #111111 solid 2px;
+}
+
+/*------------Cordoonnees----------- */
+.mes-coordonnees{
+  border: black solid 2px;
+  width: 25%;
+  margin:auto;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  background-color: white;
+}
+.mes-coordonnees input{
+  height: 1.5rem;
+  text-align: center;
+  /* margin-left: 10%;
+  margin-right: 10%; */
+  margin-bottom: 1.5rem;
+  border: #111111 solid 2px;
+  /* padding: 1px 2px; */
+}
+/* .mes-coordonnees div{
+  width: 100%;
+} */
+.mes-coordonnees form{
+margin-bottom: 1.5rem;
+margin-top: 1.5rem;
+}
+.email input, .adresse input, .pays input{
+  width: 80%;
+  text-align: center;
+  /* margin: 0 1.5rem ; */
+  margin-left: 10%;
+}
+.fullName{
+  margin-left: 10%;
+}
+input[type='submit']{
+  width: 50%;
+  height: 2rem;
+  font-size: larger;
+  font-weight: 800;
+  cursor: pointer;
+  background-color: #920517;
+  margin-left: 25%;
+  color: wheat;
+}
+
+.civilite select{
+margin-bottom: 1.5rem;
+height: 1.5rem;
+}
+
+.civilite{
+  display: flex;
+  margin: 0 20%;
+  justify-content: space-around;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.mon-reglement{
+  border: black solid 2px;
+  width: 25%;
+  margin:auto;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  background-color: white;
+
+}
