--- a/front_SPA/style.css
+++ b/front_SPA/style.css
@@ -25,14 +25,16 @@ body{
     justify-content: space-evenly;
     align-items: center;
 }
-navbar a{
+.navbar a{
     margin: 0 1.5rem;
     color: black;
     text-decoration: none;
     font-weight: 700;
     font-size: large;
+    display: flex;
+
 }
-navbar a:hover{
+.navbar a:hover{
 
     color: green;
     transition-duration: .5s;
@@ -43,12 +45,14 @@ navbar a:hover{
     /* height: 100vh; */
     background-color: white;
     margin: 10rem 7rem;
+    padding-top: 3rem;
 }
 
 .container h2{
     font-size: xx-large;
     text-align: center;
-    padding-top: 6rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 .container p{
     font-size:large;
@@ -155,7 +159,7 @@ navbar a:hover{
 /* -------------------------------------------------- Page Dons ------------------------------------------ */
 
 /* dons avec prix */
-.top-bar{
+/* .top-bar{
   background-color: white;
   height: 3.5rem;
   text-align: center;
@@ -164,7 +168,7 @@ navbar a:hover{
   justify-content: center;
   font-size: large;
   font-weight: 800;
-}
+} */
 .bigContainer{
   background: url('assets/oiseau2.webp');
   width: 100vw;
@@ -196,6 +200,8 @@ justify-content: space-evenly;
 align-items: center;
 margin-bottom: 1rem;
 padding: 1rem 0;
+height: 3rem;
+text-align: center;
 }
 
 .allprice{
@@ -264,6 +270,7 @@ padding: 1rem 0;
 .montant-libre p{
   height: 100%;
   text-align: center;
+  padding: 0;
   border-left: #111111 solid 2px;
 }
 
