--- a/elements/style.css
+++ b/elements/style.css
@@ -349,3 +349,130 @@ body {
   border: #111111 solid;
   background-color: white;
 }
+
+
+
+
+/* Gestion Animaux ADMIN */
+
+.rwd-table {
+  margin: 2rem auto;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.rwd-table tr:first-child {
+  border-top: none;
+  background: #000;
+  color: #fff;
+}
+
+.rwd-table .laLigneAnimal {
+  cursor: pointer;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  background-color: #f5f9fc;
+}
+
+.rwd-table th {
+  display: none;
+}
+
+.rwd-table td {
+  display: block;
+}
+
+.rwd-table td:first-child {
+  margin-top: .5em;
+}
+
+.rwd-table td:last-child {
+  margin-bottom: .5em;
+}
+
+.rwd-table td:before {
+  content: attr(data-th) ": ";
+  font-weight: bold;
+  width: 120px;
+  display: inline-block;
+  color: #000;
+}
+
+.rwd-table {
+  color: #333;
+  border-radius: .4em;
+  overflow: hidden;
+}
+
+.rwd-table tr {
+  border-color: #bfbfbf;
+}
+
+.rwd-table th,
+.rwd-table td {
+  padding: .5em 1em;
+}
+
+@media screen and (max-width: 601px) {
+  .rwd-table tr:nth-child(2) {
+    border-top: none;
+  }
+}
+@media screen and (min-width: 600px) {
+  .rwd-table tr:hover:not(:first-child) {
+    background-color: #d8e7f3;
+  }
+  .rwd-table td:before {
+    display: none;
+  }
+  .rwd-table th,
+  .rwd-table td {
+    display: table-cell;
+    padding: .25em .5em;
+  }
+  .rwd-table th:first-child,
+  .rwd-table td:first-child {
+    padding-left: 0;
+  }
+  .rwd-table th:last-child,
+  .rwd-table td:last-child {
+    padding-right: 0;
+  }
+  .rwd-table th,
+  .rwd-table td {
+    padding: 1em !important;
+  }
+}
+
+.delete {
+  background-color: rgb(213, 34, 34);
+  color: rgba(255, 255, 255, .7);
+}
+
+.delete:hover {
+  background-color: red;
+  color: #FFF;
+}
+
+
+.modificationAnimal {
+  text-align: unset !important;
+}
+
+.modificationAnimal h1 {
+  text-align: center;
+}
+
+.modificationAnimal input {
+  margin-top: 0;
+}
+
+.erreursModification {
+  text-align: center;
+  margin-bottom: 2rem;
+  border: 2px solid #000
+}
+
+.erreursModification h3 {
+  color: red;
+}
